CMDFLAG - Add a new -disableui flag to start with just a RPC console (and wallet); Useful for some types of debugging.
RPC - New command 'createwitnessaccount' as a convenience call to 'createaccount witness' used to create an account for witnessing.
RPC - New command 'fundwitnessaccount' used to lock funds into a witness account that has previously been created.
RPC - New command 'getwitnessinfo' used to get various info and statistics about witness system (current network weight etc.)
RPC - New command 'getaccountbalances' return a list of individual balances for all accounts.
RPC - New command 'listunspentforaccount' as account specific counterpart for listunspent.
RPC - New command 'rescan' to trigger a wallet rescan (Same as Tools>rescan via UI).
RPC - New command 'getrescanprogress' to view the progress percentageof an ongoing wallet rescan.
RPC - Add account capability to 'sendmany' command.
RPC - Modify 'listaccounts' command to take an optional second paramater to filter on account state. Add a new "state" field to the output and clarify better the difference between "type" and "HD_type"

And many other minor changes.

1.6.4.8

Minor maintenence release.
UI - Introduce a new informational widget and other minor UI improvements that make it move obvious to users that the wallet is not yet available during initial sync.
UI - Add a new menu item for setting the currency.
UI - Fix a crash in the send dialog on machines with no network connection.
UI - Remove bitcoin payment option from send screen
CORE - Update checkpoints, static difficulties, static seeds and other static information to help assist new users with better syncing experience.


1.6.4.7

Minor testnet related release.

1.6.4.6

RPC - Fix an issue introduced in 1.6.4.3 which can cause users running with "-disablewallet" to experience RPC freezes when calling certain RPC commands.

1.6.4.5

UI - Fix "run on boot" links that were broken by testnet changes and other minor "run on boot" corrections.
